--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
     animation: App-logo-spin infinite alternate 2s ease-in-out;
   }
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -30,9 +29,11 @@
 
 @keyframes App-logo-spin {
   from {
-    transform: translate(0px, 0px);
+    transform: translate(0px, 0px) rotate(10deg);
   }
   to {
-    transform: translate(0px, -30px);
+    transform: translate(0px, -30px) rotate(10deg);
   }
 }
+
+/*# sourceMappingURL=App.css.map */
